La til textbokser, fikset litt småtteri her og der

--- a/styles.css
+++ b/styles.css
@@ -23,12 +23,60 @@ body {
 }
 
 .messagebox {
+  display: flex;
+  justify-content: space-between;
   height: 37.6rem;
   width: 50rem;
   border-radius: 9px;
   margin-bottom: 2.5rem;
-  background-color: #fff;
+  background-color: #dee2e6;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.144);
+}
+
+.chatbot-box {
+  height: 18rem;
+  width: 18rem;
+  margin-top: 2rem;
+  background-color: #3440ee;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(235, 151, 78, 0.35),
+    rgba(230, 125, 34, 0.35)
+  );
+  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+}
+
+.user-box {
+  height: 18rem;
+  width: 18rem;
+  margin-top: 18rem;
+  background-color: #3440ee;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(235, 151, 78, 0.35),
+    rgba(230, 125, 34, 0.35)
+  );
+  clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+}
+
+.user-text {
+  color: #fff;
+  line-height: 1.3rem;
+  padding: 1rem;
+}
+
+.user-text-style {
+  height: 12rem;
+  width: 13rem;
+  margin-left: 4.6rem;
+  margin-top: 3rem;
+}
+
+.chatbot-text-style {
+  height: 12rem;
+  width: 13rem;
+  margin-right: 4.6rem;
+  margin-top: 3rem;
 }
 
 .chatbot-img-box {
@@ -102,4 +150,9 @@ body {
 .btn--form:hover {
   background-color: #fff;
   color: #555;
+}
+
+#your-message {
+  margin-top: 1.2rem;
+  background-color: #dee2e6;
 }
