Lagt til textboker og tilpasset png fil

--- a/styles.css
+++ b/styles.css
@@ -19,17 +19,64 @@ body {
 }
 
 .chatbot .heading {
-  color: inherit;
   margin-bottom: 3.2rem;
 }
 
 .messagebox {
+  display: flex;
+  justify-content: space-between;
   height: 37.6rem;
   width: 50rem;
   border-radius: 9px;
   margin-bottom: 2.5rem;
-  background-color: #fff;
+  background-color: #dee2e6;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.144);
+}
+
+.chatbot-box {
+  height: 18rem;
+  width: 18rem;
+  margin-top: 2rem;
+  background-color: #3440ee;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(235, 151, 78, 0.35),
+    rgba(230, 125, 34, 0.35)
+  );
+  clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
+}
+
+.user-box {
+  height: 18rem;
+  width: 18rem;
+  margin-top: 18rem;
+  background-color: #3440ee;
+  background-image: linear-gradient(
+    to right bottom,
+    rgba(235, 151, 78, 0.35),
+    rgba(230, 125, 34, 0.35)
+  );
+  clip-path: polygon(25% 0%, 100% 0%, 100% 100%, 25% 100%, 0% 50%);
+}
+
+.user-text {
+  color: #fff;
+  line-height: 1.3rem;
+  padding: 1rem;
+}
+
+.user-text-style {
+  height: 12rem;
+  width: 13rem;
+  margin-left: 4.6rem;
+  margin-top: 3rem;
+}
+
+.chatbot-text-style {
+  height: 12rem;
+  width: 13rem;
+  margin-right: 4.6rem;
+  margin-top: 3rem;
 }
 
 .chatbot-img-box {
@@ -39,7 +86,7 @@ body {
       rgba(230, 125, 34, 0.35)
     ),
     url("android.png");
-  background-size: cover;
+  background-size: 896px 963px;
   width: 56rem;
   margin: 1rem;
 }
@@ -49,13 +96,6 @@ body {
   grid-template-columns: 1fr 1fr;
   column-gap: 3.2rem;
   row-gap: 2.4rem;
-}
-
-.chatbot-form label {
-  display: block;
-  font-size: 1.6rem;
-  font-weight: 500;
-  margin-bottom: 1.2rem;
 }
 
 .chatbot-form input,
@@ -103,4 +143,9 @@ body {
 .btn--form:hover {
   background-color: #fff;
   color: #555;
+}
+
+#your-message {
+  margin-top: 1.2rem;
+  background-color: #dee2e6;
 }
